--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ body {
   font-family: var(--font-body);
   color: var(--color-text-light);
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 img {
